# homework_gobang_python

./: pyproject.toml
Client/: controller.py  game.py  main.py  ui.py
PyQT/UI_Design/: GameView.ui  Lobby.ui  Login.ui
Server/: lobby.py  main.py  player.py  room.py  server.py
