[tool.poetry]
name = "Gobang_FastAPI"
version = "0.0.1"
description = "A game which introduced by Network Programming final homework"
authors = ["Nesquate <nesquate.100001@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
